@@ -1,4 +1,4 @@
-/* $Id: winimagepeldr.cpp,v 1.75 2001-05-30 01:34:12 phaller Exp $ */
+/* $Id: winimagepeldr.cpp,v 1.76 2001-05-30 03:28:02 phaller Exp $ */
 
 /*
  * Win32 PE loader Image base class
@@ -60,10 +60,9 @@
 //This is very useful during debugging as you'll get lots of exceptions
 //otherwise.
 
-// 2001-05-30 PH enabled this again
-#ifdef DEBUG
+//#ifdef DEBUG
 #define COMMIT_ALL
-#endif
+//#endif
 
 char szErrorTitle[]     = "Odin";
 char szMemErrorMsg[]    = "Memory allocation failure";
@@ -113,8 +112,8 @@ Win32PeLdrImage::Win32PeLdrImage(char *pszFileName, BOOL isExe) :
     Win32ImageBase(-1),
     nrsections(0), imageSize(0), dwFlags(0), section(NULL),
     imageVirtBase(-1), realBaseAddress(0), imageVirtEnd(0),
-    nrNameExports(0), nrOrdExports(0), nameexports(NULL), ordexports(NULL),
-    memmap(NULL), pFixups(NULL), dwFixupSize(0), curnameexport(NULL), curordexport(NULL)
+    nrNameExports(0), nrOrdExports(0),
+    memmap(NULL), pFixups(NULL), dwFixupSize(0)
 {
  HFILE  dllfile;
 
@@ -167,12 +166,6 @@ Win32PeLdrImage::~Win32PeLdrImage()
 
     if(realBaseAddress)
         DosFreeMem((PVOID)realBaseAddress);
-
-    if(nameexports)
-        free(nameexports);
-
-    if(ordexports)
-        free(ordexports);
 
     if(section)
         free(section);
@@ -1312,6 +1305,9 @@ BOOL Win32PeLdrImage::processExports(char *win32file)
     nrOrdExports  = ped->NumberOfFunctions;
     nrNameExports = ped->NumberOfNames;
 
+    // as we now know the exact size of the export caches, resize them
+    pLookupName->setSize(nrNameExports);
+
     int   ord, RVAExport;
     char *name;
     for(i=0;i<ped->NumberOfNames;i++)
@@ -1364,72 +1360,35 @@ BOOL Win32PeLdrImage::processExports(char *win32file)
 //******************************************************************************
 void Win32PeLdrImage::AddNameExport(ULONG virtaddr, char *apiname, ULONG ordinal, BOOL fAbsoluteAddress)
 {
-    ULONG nsize;
-
-    if(nameexports == NULL) {
-        nameExportSize= 4096;
-        nameexports   = (NameExport *)malloc(nameExportSize);
-        curnameexport = nameexports;
-    }
-    nsize = (ULONG)curnameexport - (ULONG)nameexports;
-    if(nsize + sizeof(NameExport) + strlen(apiname) > nameExportSize) {
-        nameExportSize += 4096;
-        char *tmp = (char *)nameexports;
-        nameexports = (NameExport *)malloc(nameExportSize);
-        memcpy(nameexports, tmp, nsize);
-        curnameexport = (NameExport *)((ULONG)nameexports + nsize);
-        free(tmp);
-    }
+    ULONG uv;
 
     if(fAbsoluteAddress) //forwarders use absolute address
-    {
-        curnameexport->virtaddr = virtaddr;
-    }
+        uv = virtaddr;
     else
-    {
-        curnameexport->virtaddr = realBaseAddress + (virtaddr - oh.ImageBase);
-    }
+        uv = realBaseAddress + (virtaddr - oh.ImageBase);
 
     // add named export to the lookup cache
-    pLookupName->addElement(apiname, (void*)curnameexport->virtaddr);
+    pLookupName->addElement(apiname, (void*)uv);
 
     // also add the ordinal export to the lookup cache
-    pLookupOrdinal->addElement(ordinal, (void*)curnameexport->virtaddr);
-
-    curnameexport->ordinal  = ordinal;
-    *(ULONG *)curnameexport->name = 0;
-    strcpy(curnameexport->name, apiname);
-
-    curnameexport->nlength = strlen(apiname) + 1;
-    if(curnameexport->nlength < sizeof(curnameexport->name))
-        curnameexport->nlength = sizeof(curnameexport->name);
-
-    curnameexport = (NameExport *)((ULONG)curnameexport->name + curnameexport->nlength);
+    pLookupOrdinal->addElement(ordinal, (void*)uv);
 }
 //******************************************************************************
 //******************************************************************************
 void Win32PeLdrImage::AddOrdExport(ULONG virtaddr, ULONG ordinal, BOOL fAbsoluteAddress)
 {
-    if(ordexports == NULL)
-    {
-        ordexports   = (OrdExport *)malloc(nrOrdExports * sizeof(OrdExport));
-        curordexport = ordexports;
-    }
-
+    ULONG uv;
     if(fAbsoluteAddress)
     {   //forwarders use absolute address
-        curordexport->virtaddr = virtaddr;
+        uv = virtaddr;
     }
     else
     {
-        curordexport->virtaddr = realBaseAddress + (virtaddr - oh.ImageBase);
+        uv = realBaseAddress + (virtaddr - oh.ImageBase);
     }
 
     // add ordinal export to the lookup cache
-    pLookupOrdinal->addElement((int)ordinal, (void*)curordexport->virtaddr);
-
-    curordexport->ordinal  = ordinal;
-    curordexport++;
+    pLookupOrdinal->addElement((int)ordinal, (void*)uv);
 }
 //******************************************************************************
 //******************************************************************************
@@ -1847,40 +1806,7 @@ ULONG Win32PeLdrImage::getApi(char *name)
 {
     // ordinal export from the lookup cache
     void* pNamed = pLookupName->getElement(name);
-    if (pNamed != NULL)
-        return (ULONG)pNamed;
-
-
-    ULONG       apiaddr, i, apilen;
-    char       *apiname;
-    char        tmp[4];
-    NameExport *curexport;
-    ULONG       ulAPIOrdinal;                    /* api requested by ordinal */
-
-    apilen = strlen(name) + 1;
-    if(apilen < 4)
-    {
-        *(ULONG *)tmp = 0;
-        strcpy(tmp, name);
-        apiname = tmp;
-        apilen  = 4;
-    }
-    else  apiname = name;
-
-    curexport = nameexports;
-    for(i=0; i<nrNameExports; i++)
-    {
-        if(apilen == curexport->nlength &&
-           *(ULONG *)curexport->name == *(ULONG *)apiname)
-        {
-            if(strcmp(curexport->name, apiname) == 0)
-            {
-                return(curexport->virtaddr);
-            }
-        }
-        curexport = (NameExport *)((ULONG)curexport->name + curexport->nlength);
-    }
-    return(0);
+    return (ULONG)pNamed;
 }
 //******************************************************************************
 //******************************************************************************
@@ -1888,32 +1814,7 @@ ULONG Win32PeLdrImage::getApi(int ordinal)
 {
     // ordinal export from the lookup cache
     void* pOrdinal = pLookupOrdinal->getElement(ordinal);
-    if (pOrdinal != NULL)
-        return (ULONG)pOrdinal;
-
-    ULONG       apiaddr, i;
-    OrdExport  *curexport;
-    NameExport *nexport;
-
-    curexport = ordexports;
-    for(i=0;i<nrOrdExports;i++)
-    {
-        if(curexport->ordinal == ordinal)
-            return(curexport->virtaddr);
-        curexport++;
-    }
-    //Name exports also contain an ordinal, so check this
-    nexport = nameexports;
-    for(i=0;i<nrNameExports;i++)
-    {
-        if(nexport->ordinal == ordinal)
-        {
-            return(nexport->virtaddr);
-        }
-
-        nexport = (NameExport *)((ULONG)nexport->name + nexport->nlength);
-    }
-    return(0);
+    return (ULONG)pOrdinal;
 }
 //******************************************************************************
 //Returns required OS version for this image
